--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
     </div>
 </nav>
-<div id="mydiv" data-spy="scroll" data-target="#navbar-example" data-offset="0"  style="overflow:auto; position: relative;">
+<div id="mydiv" data-spy="scroll" data-target="#navbar-example" data-offset="0" >
     <form class="form-horizontal" role="form">
         <div class="form-group" id="time">
             <label for="dreamtime" class="col-sm-1 control-label">时间：</label>
