--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/vue.js"></script>
+    <!--<link rel="stylesheet" href="css/bootstrap.css">-->
+    <!--<script src="js/jquery-3.2.1.js"></script>-->
+    <!--<script src="js/bootstrap.js"></script>-->
+    <!--<script src="js/vue.js"></script>-->
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
+
     <title>记梦模版</title>
     <script src="js/jquery.flexText.js"></script>
     <link rel="stylesheet" href="css/style.css">
