--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.5.16/vue.min.js"></script>
+    <link rel="shortcut icon"type="image/x-icon"href="favicon.ico" />
 
     <title>记梦模版</title>
     <script src="js/jquery.flexText.js"></script>
