'添加计数器’

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
     </form>
 </div>
-
+<div align="center" style="margin-bottom: 10px;"><b>访问次数：</b><a href="http://www.amazingcounters.com"><img border="0" src="http://cc.amazingcounters.com/counter.php?i=3221441&c=9664636" alt="AmazingCounters.com"></a></div>
 <script>
     new Vue({
         el: "#mydiv",
