--- a/index20180327.html
+++ b/index20180327.html
@@ -112,22 +112,8 @@
         <div class="form-group" id="all">
             <label for="dreamall" class="col-sm-1 control-label">结果：</label>
             <div class="col-sm-11">
-                <div class="dreamall">
-                    <p><b>时间：</b>{{ dreamtime }}</p>
-                    <br>
-                    <p><b>类型：</b>{{dreamtype}}</p>
-                    <br>
-                    <p><b>梦名：</b>{{dreamname}}</p>
-                    <br>
-                    <p><b>方法：</b>{{dreammethod}}</p>
-                    <br>
-                    <p><b>内容：</b><br>{{dreamdata}}</p>
-                    <br>
-                    <p><b>问题：</b><br>{{dreamproblem}}</p>
-                    <br>
-                    <p><b>总结：</b><br>{{dreamsummary}}</p>
-                    <br>
-                </div>
+                <textarea id="dreamall" class="form-control"
+                          v-model="dreamall"></textarea>
             </div>
         </div>
     </form>
