--- a/index.html
+++ b/index.html
@@ -113,20 +113,21 @@
             <label for="dreamall" class="col-sm-1 control-label">结果：</label>
             <div class="col-sm-11">
                 <div class="dreamall">
-                    <p><b>时间：</b>{{ dreamtime }}</p>
-                    <br>
-                    <p><b>类型：</b>{{dreamtype}}</p>
-                    <br>
-                    <p><b>梦名：</b>{{dreamname}}</p>
-                    <br>
-                    <p><b>方法：</b>{{dreammethod}}</p>
-                    <br>
-                    <p><b>内容：</b><br>{{dreamdata}}</p>
-                    <br>
-                    <p><b>问题：</b><br>{{dreamproblem}}</p>
-                    <br>
-                    <p><b>总结：</b><br>{{dreamsummary}}</p>
-                    <br>
+                    <p>
+                        <b>时间：</b>{{ dreamtime }}
+                    <br><br>
+                    <b>类型：</b>{{dreamtype}}
+                    <br><br>
+                    <b>梦名：</b>{{dreamname}}
+                    <br><br>
+                    <b>方法：</b>{{dreammethod}}
+                    <br><br>
+                    <b>内容：</b><br>{{dreamdata}}
+                    <br><br>
+                    <b>问题：</b><br>{{dreamproblem}}
+                    <br><br>
+                    <b>总结：</b><br>{{dreamsummary}}
+                    </p>
                 </div>
             </div>
         </div>
